--- a/WebUI3/ClientApp/src/app/bugs-list/bugs-list.component.html
+++ b/WebUI3/ClientApp/src/app/bugs-list/bugs-list.component.html
@@ -1,21 +1,25 @@
+<div class="navbar-dark">
+  <div class="btn-group">
+    <button type="button" class="btn btn-secondary">Add</button>
+    <button type="button" class="btn btn-secondary">Edit</button>
+    <button type="button" class="btn btn-secondary">Delete</button>
+  </div>
+</div>
 <table class="table table-striped">
   <thead>
-  <tr>
-    <th scope="col">#</th>
-    <th scope="col">Country</th>
-    <th scope="col">Area</th>
-    <th scope="col">Population</th>
-  </tr>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">ID</th>
+      <th scope="col">Description</th>
+      <th scope="col">Status</th>
+    </tr>
   </thead>
   <tbody>
-  <tr *ngFor="let country of countries; index as i">
-    <th scope="row">{{ i + 1 }}</th>
-    <td>
-      <img [src]="'https://upload.wikimedia.org/wikipedia/commons/' + country.flag" class="mr-2" style="width: 20px">
-      {{ country.name }}
-    </td>
-    <td>{{ country.area | number }}</td>
-    <td>{{ country.population | number }}</td>
-  </tr>
+    <tr *ngFor="let bug of bugs; index as i">
+      <th scope="row">{{ i + 1 }}</th>
+      <td>{{ bug.bugId | number}}</td>
+      <td>{{ bug.description }}</td>
+      <td>{{ bug.statusId | bugstatusname }}</td>
+    </tr>
   </tbody>
 </table>
