--- a/WebUI3/ClientApp/src/app/bugs-list/bugs-list.component.html
+++ b/WebUI3/ClientApp/src/app/bugs-list/bugs-list.component.html
@@ -1,25 +1,23 @@
 <div class="navbar-dark">
   <div class="btn-group">
-    <button type="button" class="btn btn-secondary">Add</button>
-    <button type="button" class="btn btn-secondary">Edit</button>
+    <button type="button" class="btn btn-secondary" [routerLink]='["bug-add"]'>Add</button>
+    <button type="button" class="btn btn-secondary" [routerLink]='["bug-edit", currentBugId]' [disabled]="!currentBugId">Edit</button>
     <button type="button" class="btn btn-secondary">Delete</button>
   </div>
 </div>
-<table class="table table-striped">
+<table class="table table-striped table-bordered">
   <thead>
     <tr>
-      <th scope="col">#</th>
       <th scope="col">ID</th>
       <th scope="col">Description</th>
       <th scope="col">Status</th>
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let bug of bugs; index as i">
-      <th scope="row">{{ i + 1 }}</th>
+    <tr *ngFor="let bug of bugs; index as i" (mousedown)="selectBug($event, bug)" [class.table-active]="bug.bugId === currentBugId">
       <td>{{ bug.bugId | number}}</td>
       <td>{{ bug.description }}</td>
-      <td>{{ bug.statusId | bugstatusname }}</td>
+      <td>{{ bug.statusId | bugStatusName }}</td>
     </tr>
   </tbody>
 </table>
