--- a/WebUI3/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/WebUI3/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-sm navbar-dark bg-dark border-bottom mb-3">
+  <nav class="navbar navbar-expand-sm navbar-dark main-bg-color border-bottom mb-3 box-shadow">
     <div class="container">
       <a class="navbar-brand" [routerLink]='["/"]'>WebUI3</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-label="Toggle navigation"
@@ -9,13 +9,13 @@
       <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse" [ngClass]='{"show": isExpanded}'>
         <ul class="navbar-nav">
           <li class="nav-item" [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]="{ exact: true }">
-            <a class="nav-link text-light" [routerLink]='["/"]'>Home</a>
+            <a class="nav-link text-dark" [routerLink]='["/"]'>Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]='["link-active"]'>
-            <a class="nav-link text-light" [routerLink]='["/counter"]'>Counter</a>
+            <a class="nav-link text-dark" [routerLink]='["/counter"]'>Counter</a>
           </li>
           <li class="nav-item" [routerLinkActive]='["link-active"]'>
-            <a class="nav-link text-light" [routerLink]='["/fetch-data"]'>Fetch data</a>
+            <a class="nav-link text-dark" [routerLink]='["/fetch-data"]'>Fetch data</a>
           </li>
         </ul>
       </div>
